# bridgekit

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: tests.yml
bridgekit/: __init__.py  config.py  planner.py  reviewer.py  search.py
sample_data/: q1_2024_churn.md  q3_2024_churn.docx
tests/: test_planner.py  test_reviewer.py  test_search.py
