[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgekit"
version = "0.2.0"
description = "AI tools that make you a better data scientist, not a redundant one."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["data science", "AI", "analysis", "evaluation", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "anthropic>=0.20.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "nbformat>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/getbridgekit/bridgekit"
Issues = "https://github.com/getbridgekit/bridgekit/issues"
